--- a/FreeZoneAssist_Android/trunk/res/menu/main_menu.xml
+++ b/FreeZoneAssist_Android/trunk/res/menu/main_menu.xml
@@ -19,24 +19,29 @@
     <item android:id="@+id/mm_set_driver"
         android:visible="true"
         android:alphabeticShortcut="d"
+        android:icon="@drawable/ic_menu_edit"
         android:title="Fahrer" />
 
     <item android:id="@+id/mm_set_section"
         android:alphabeticShortcut="s"
+        android:icon="@drawable/ic_menu_edit"
         android:title="Sektion" />
 
     <item android:id="@+id/mm_about"
         android:alphabeticShortcut="i"
+        android:icon="@drawable/ic_menu_info_details"
         android:title="Info" />
 
     <item android:id="@+id/mm_settings"
         android:visible="false"
         android:alphabeticShortcut="c"
+        android:icon="@drawable/ic_menu_preferences"
         android:title="Einstellungen" />
 
     <item android:id="@+id/mm_exit"
         android:visible="false"
         android:alphabeticShortcut="x"
+        android:icon="@drawable/ic_menu_close_clear_cancel"
         android:title="Exit" />
 
 </menu>
