--- a/FreeZoneAssist_Android/trunk/res/layout/main.xml
+++ b/FreeZoneAssist_Android/trunk/res/layout/main.xml
@@ -14,7 +14,7 @@
 			<TextView 
 				android:id="@+id/tvRider" 
 				android:text="@string/tvRider_default"
-				android:textSize="32sp" 
+				android:textSize="32dp" 
 				android:typeface="monospace" 
 				android:layout_width="wrap_content" 
 				android:layout_height="wrap_content" 
@@ -25,7 +25,7 @@
 			<TextView  
 				android:id="@+id/tvSection"
 				android:text="@string/tvSection_default"
-				android:textSize="32sp" 
+				android:textSize="32dp" 
 				android:typeface="monospace" 
 				android:layout_width="wrap_content" 
 				android:layout_height="wrap_content" 
@@ -38,7 +38,7 @@
 			<TextView  
 				android:id="@+id/tvPoints"
 				android:text="@string/tvPoints_default"
-				android:textSize="32sp" 
+				android:textSize="32dp" 
 				android:typeface="monospace" 
 				android:layout_width="wrap_content" 
 				android:layout_height="wrap_content" 
@@ -49,7 +49,7 @@
 			<TextView  
 				android:id="@+id/tvCountdown"
 				android:text="@string/tvCountdown_default"
-				android:textSize="32sp" 
+				android:textSize="32dp" 
 				android:typeface="monospace" 
 				android:layout_width="wrap_content" 
 				android:layout_height="wrap_content" 
