(v0.020/28apr11) + handling of the freshly set drivername revised + left TextView click -> SetDriver + right TextView click -> SetSection + no short STOP button reaction any more + Timeout_Action is postponed until STOP key is handled + Icons now round (added transparency) + application name under icon shortened -> "FreeZone""
git-svn-id: file:///home/rhh/src/share/FreeZoneAssist_Repo@7 bae92175-4bb9-9d4c-b915-eebbe7d97807

--- a/FreeZoneAssist_Android/trunk/res/menu/stop_submenu.xml
+++ b/FreeZoneAssist_Android/trunk/res/menu/stop_submenu.xml
@@ -7,5 +7,7 @@
 				android:title="@string/stop_menu" />
 		<item 	android:id="@+id/fatal_stop" 
 				android:title="@string/fatal_stop_menu" />
+		<item 	android:id="@+id/abort_stop" 
+				android:title="@string/abort_stop_menu" />
 	</item>
 </menu>
